第二次提交

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
     <title>Webpack_base</title>
 </head>
 <body>
-<!--    <script src="../dist/main.js"></script>-->
-    <!--<script src="/main.js"></script> --><!-- /就代表了根目录 -->
+    <div id="root"></div>
 </body>
 </html>
